Correcting layout bugs on home page.

--- a/_css/Root_Project.css
+++ b/_css/Root_Project.css
@@ -247,7 +247,7 @@ a.navDown {
 	padding-top: 20px;
 }
 .slides_container {
-	width: 450px;
+	width: 448px;
 }
 .slides_container div {
 	width: 450px;
